<?xml version="1.0"?>
<package>
  <name>state_rviz_plugin</name>
  <version>0.0.1</version>
  <description>
    Visualization plugins of state messages
  </description>

  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <maintainer email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>state_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>state_msgs</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
