<?xml version="1.0"?>
<package format="2">
  <name>whole_body_state_rviz_plugin</name>
  <version>0.0.1</version>
  <description>
    Visualization plugins of state messages
  </description>

  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <maintainer email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>whole_body_state_msgs</build_depend>
  <build_depend>pinocchio</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>whole_body_state_msgs</exec_depend>
  <exec_depend>pinocchio</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
